# challonge-bet-bot

./: .gitignore  README.md  flake.nix  pyproject.toml
challonge_bet_bot/: api.py  api_v2_notworking.py  broadcast.py  commands.py  conf.py  main.py  outcome_computer.py  storage.py
pingpov_bet_bot/: api.py  api_v2_notworking.py  broadcast.py  commands.py  conf.py  main.py  outcome_computer.py  storage.py
