[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "challonge_bet_bot"
version = "0.0.1"
description = "Bot for handling bets on telegram using Challonge's scores"
requires-python = ">=3.8"
keywords = ["python"]
authors = [
  {name = "Samuele Facenda", email = "samuele.facenda@gmail.com"},
]
dependencies = [
  "requests",
  "cachetools",
  "python-telegram-bot",
  "python-dotenv"
]

[project.scripts]
challonge-bet-bot = "challonge_bet_bot:main"
